! One last fix to board news and articles spacing.

--- a/portal.css
+++ b/portal.css
@@ -57,7 +57,6 @@
 {
 	width: 100%;
 	text-align: center;
-	padding-top: 0.5em;
 }
 .sp_clear
 {
@@ -222,6 +221,10 @@ td.sp_shop
 .sp_article_icon
 {
 	margin: 5px 10px 0 0;
+}
+.sp_article_content
+{
+	margin-bottom: 0.5em;
 }
 
 /* ************************************* */
